# kekupload-server

./: .gitignore  CONTRIBUTE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  configure.sh  default.env  example.txt  index.md  upload.sh
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
assets/css/: style.scss
diesel/: up.sql
docs/: API.md  index.md
docs/api/: errors.md  index.md  workflow.md
docs/api/routes/: create.md  download.md  finish.md  index.md  remove.md  upload.md
docs/api/types/: extension.md  hash.md  index.md  stream.md
docs/setup/: database.md  index.md
migrations/2022-02-08-193759_create_products/: up.sql
src/: colors.rs  config.rs  database.rs  errors.rs  http.rs  main.rs  random.rs  schema.rs
src/models/: file.rs
src/routes/: api.rs  embed.rs  mod.rs  web.rs
src/routes/api/: create.rs  download.rs  finish.rs  length.rs  mod.rs  remove.rs  upload.rs
src/util/: checker.rs  chunked.rs  files.rs  mod.rs  random.rs
