[package]
name = "uploadserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_cors = "0.5.0-beta-2"
dotenv = "0.9.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
sha-1 = "0.10.0"
rand = "0.8.4"
hex = "0.4.3"